Fix Goggles title alignment

--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -389,7 +389,7 @@
   }
 }
 
-.badge {
+.goggle-badge {
   margin: 6px 5px 8px;
   background: none;
   border: solid 2px #105fb0;
